--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ $(function() {
 	setInterval("explod()",500);
 	window.addEventListener( 'resize', onWindowResize, false );
     });  
-function onWindowResize(){
-	alert(1);
-}
+// function onWindowResize(){
+// 	alert(1);
+// }
 function clearg(){
 	for(var i = 0; i< gloablYanhuaArray.length;i++){
 		if(gloablYanhuaArray[i].dead){
